--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run a Personal Site Load
-      run: echo "https://celestine.veracelservers.com"
+      run: open "https://celestine.veracelservers.com"
 
     - name: Check Workflow Success
       run: echo "The workflow passed successfully!"
@@ -40,7 +40,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run Company Site load
-      run: echo "https://veracelservers.com"
+      run: open "https://veracelservers.com"
 
     - name: Check Workflow Success
       run: echo "The workflow passed successfully!"
