--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,6 @@ jobs:
 
     - name: Check Workflow Success
       run: echo "The workflow passed successfully!"
-<<<<<<< HEAD
   launch-personal-site:
     runs-on: ubuntu-latest
 
@@ -28,7 +27,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run a Personal Site Load
-      run: echo "https://celestine.veracelservers.com"
+      run: xdg-open "https://celestine.veracelservers.com"
 
     - name: Check Workflow Success
       run: echo "The workflow passed successfully!"
@@ -40,9 +39,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Run Company Site load
-      run: echo "https://veracelservers.com"
+      run: xdg-open "https://veracelservers.com"
 
     - name: Check Workflow Success
       run: echo "The workflow passed successfully!"
-=======
->>>>>>> 4428c92e711a38f7fb5fccff8ebd6e5b0180d96d
